# eigenmead

./: Cargo.toml  node
muspell-daemon/: Cargo.toml
muspell-daemon/src/: main.rs
muspell-identity/: Cargo.toml
muspell-identity/src/: alias.rs  canonical.rs  lib.rs  verify.rs
muspell-node/: Cargo.toml
muspell-node/src/: config.rs
muspell-proto/src/: capability.rs  frame.rs  lib.rs  types.rs
muspell-pubsub/src/: manager.rs  topic.rs
muspell-rpc/: Cargo.toml
muspell-rpc/src/: dispatch.rs  error.rs
muspell-transport/src/: lib.rs
