[package]
name                 = "muspell-identity"
description          = "Key management, signing, verification, and alias registry for Muspell"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
repository.workspace = true

# ── Features ─────────────────────────────────────────────────────────────────
#
# `keygen` — enables keypair generation via OsRng.
#            Disable for environments that supply entropy externally.
#
[features]
default = ["keygen"]
keygen  = ["dep:rand"]

[dependencies]
muspell-proto           = { path = "../muspell-proto" }
ed25519-dalek.workspace = true
blake3.workspace        = true
bs58.workspace          = true
hex.workspace           = true
thiserror.workspace     = true
zeroize.workspace       = true
serde.workspace         = true
rand                    = { workspace = true, optional = true }
