[package]
name        = "muspell-rpc"
description = "Request/response abstraction over muspell-transport"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
muspell-proto     = { path = "../muspell-proto" }
muspell-transport = { path = "../muspell-transport" }

async-trait.workspace = true
thiserror.workspace   = true
tracing.workspace     = true
tokio.workspace       = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = "0.3"
